--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <title>Wall</title>
 </head>
 <body>
-  <div>
-<h1>Where is my Lord!<span clas="highlight"></span></h1>
-<h1>Tell me,where have you kept him wom my soul loves.<span clas="highlight"></span></h1>
-</div>
+  
+<h1>Where is my Lord! Tell me,where have you kept him wom my soul loves.<span clas="highlight"></span></h1>
+
   <!--img src="images/.jpg" class="top-left" alt="Nature Image">
   <img src="images/.jpg" class="top-right" alt="Abstract Art">
   <img src="images/.jpg" class="bottom-left" alt="Texture Image">
