--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   
-<h1>Where is my Lord! Tell me,where have you kept him wom my soul loves.<span clas="highlight"></span></h1>
+<h1>Where is my Lord! Tell me,where have you kept him whom my soul loves.<span clas="highlight"></span></h1>
 
   <!--img src="images/.jpg" class="top-left" alt="Nature Image">
   <img src="images/.jpg" class="top-right" alt="Abstract Art">
